--- a/app/src/main/res/menu/menu_plot.xml
+++ b/app/src/main/res/menu/menu_plot.xml
@@ -1,16 +1,17 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <!--
     <item android:id="@+id/menu_start_now"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:orderInCategory="1"
         android:title="@string/menu_start_now" />
     -->        
     <item android:id="@+id/menu_refresh"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:orderInCategory="2"
         android:title="@string/menu_refresh" />
     <item android:id="@+id/get_view_info"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:orderInCategory="100"
         android:title="@string/view_info" />
 </menu>
