Implemented plotting the whole arrays.  Basically working.
Added domain (time) labels.
Added Pan/Zoom (not working so well for horizontal).
Changed TAG's to not have spaces so work as filters in Logcat.

--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -34,18 +34,22 @@
         app:gridBackgroundColor="#FDFDFD"
         app:graphBackgroundColor="#FDFDFD"
         app:graphMarginTop="20dp"
-        app:graphMarginBottom="12dp"
+        app:graphMarginBottom="20dp"
         app:graphMarginLeft="30dp"
         app:graphMarginRight="5dp"
         app:gridInsetLeft="25dp"
+        app:gridInsetBottom="20dp"
         app:title="@string/hr_title"
         app:titleTextColor="#000000"
         app:titleTextSize="15dp"
         app:rangeTitle="@string/hr_range_title"
         app:rangeTitleTextColor="#000000"
         app:rangeTitleTextSize="14dp"
+        app:domainTitle="@string/hr_domain_title"
+        app:domainTitleTextColor="#000000"
+        app:domainTitleTextSize="14dp"
 
-        app:lineLabels="left"
+        app:lineLabels="left|bottom"
         app:renderMode="use_background_thread"
         />
 
