--- a/app/src/main/res/menu/menu_plot.xml
+++ b/app/src/main/res/menu/menu_plot.xml
@@ -5,13 +5,17 @@
         app:showAsAction="never"
         android:orderInCategory="1"
         android:title="@string/menu_start_now" />
-    -->        
+    -->
+    <item android:id="@+id/menu_zoom_reset"
+          app:showAsAction="never"
+          android:orderInCategory="1"
+          android:title="@string/menu_zoom_reset" />
     <item android:id="@+id/menu_refresh"
-        app:showAsAction="never"
-        android:orderInCategory="2"
-        android:title="@string/menu_refresh" />
+          app:showAsAction="never"
+          android:orderInCategory="2"
+          android:title="@string/menu_refresh" />
     <item android:id="@+id/get_view_info"
         app:showAsAction="never"
-        android:orderInCategory="100"
+        android:orderInCategory="3"
         android:title="@string/view_info" />
 </menu>
