--- a/app/src/main/res/menu/menu_session_manager.xml
+++ b/app/src/main/res/menu/menu_session_manager.xml
@@ -7,19 +7,19 @@
           android:icon="@drawable/ic_action_plot"
           android:checkable="false"
           android:orderInCategory="2"
-          app:showAsAction="ifRoom"/>
+          app:showAsAction="always"/>
     <item android:id="@+id/menu_refresh"
           android:title="@string/menu_refresh"
           android:icon="@drawable/ic_action_refresh"
           android:checkable="false"
           android:orderInCategory="3"
-          app:showAsAction="ifRoom"/>
+          app:showAsAction="always"/>
     <item android:id="@+id/menu_discard"
           android:title="@string/menu_discard"
           android:icon="@drawable/ic_action_discard"
           android:checkable="false"
           android:orderInCategory="4"
-          app:showAsAction="ifRoom"/>
+          app:showAsAction="always"/>
     <item android:id="@+id/menu_save"
           android:title="@string/menu_save"
           android:icon="@drawable/ic_action_save"
