Changed plot color to black background.

--- a/app/src/main/res/layout/activity_plot.xml
+++ b/app/src/main/res/layout/activity_plot.xml
@@ -29,10 +29,10 @@
         app:paddingBottom="5dp"
         app:paddingLeft="5dp"
         app:paddingRight="5dp"
-        app:backgroundColor="#FDFDFD"
+        app:backgroundColor="#000000"
 
-        app:gridBackgroundColor="#FDFDFD"
-        app:graphBackgroundColor="#FDFDFD"
+        app:gridBackgroundColor="#000000"
+        app:graphBackgroundColor="#000000"
         app:graphMarginTop="20dp"
         app:graphMarginBottom="20dp"
         app:graphMarginLeft="30dp"
@@ -43,10 +43,14 @@
         app:titleTextColor="#000000"
         app:titleTextSize="15dp"
         app:rangeTitle="@string/hr_range_title"
-        app:rangeTitleTextColor="#000000"
+        app:rangeOriginLineColor="#555555"
+        app:rangeLineColor="#555555"
+        app:rangeTitleTextColor="#FFFFFF"
         app:rangeTitleTextSize="14dp"
         app:domainTitle="@string/hr_domain_title"
-        app:domainTitleTextColor="#000000"
+        app:domainOriginLineColor="#555555"
+        app:domainLineColor="#555555"
+        app:domainTitleTextColor="#FFFFFF"
         app:domainTitleTextSize="14dp"
 
         app:lineLabels="left|bottom"
