--- a/app/src/main/res/menu/menu_plot.xml
+++ b/app/src/main/res/menu/menu_plot.xml
@@ -7,7 +7,8 @@
         android:title="@string/menu_start_now" />
     -->
     <item android:id="@+id/menu_zoom_reset"
-          app:showAsAction="never"
+          android:icon="@drawable/ic_fullscreen_white_36dp"
+          app:showAsAction="ifRoom"
           android:orderInCategory="1"
           android:title="@string/menu_zoom_reset" />
     <item android:id="@+id/menu_refresh"
