--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,6 +1,6 @@
-<PreferenceScreen
+<androidx.preference.PreferenceScreen
         xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory
+    <androidx.preference.PreferenceCategory
             android:title="@string/plot_preferences">
         <CheckBoxPreference
                 android:key="plotHrPreference"
@@ -18,5 +18,5 @@
                 android:title="@string/title_plot_interval_preference"
                 android:summary="@string/summary_plot_interval_preference"
                 android:dialogTitle="@string/dialog_title_plot_interval_preference" />
-    </PreferenceCategory>
-</PreferenceScreen>
+    </androidx.preference.PreferenceCategory>
+</androidx.preference.PreferenceScreen>
